overlapping issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -5783,7 +5783,7 @@ h3 {
   margin-top: 83px;
   position: absolute;
   top: 0;
-  z-index: 9998; }
+  z-index: 9997; }
 
 #nav ul {
   margin: 0;
